# synth2

./: .travis.yml  Cargo.toml  README.md  STANDARDS.md  TODO.md  example.patch  notes.md  rustfmt.toml
build_tools/: coverage.sh  install_kcov.sh
cpp/: main.cpp
examples/: fourier.rs  matrix.rs  sine_dump.rs  square_dump.rs
patches/: filtered_square.patch  sine.patch  square.patch
src/: audioprops.rs  check_rt.rs  jack_engine.rs  lib.rs  main.rs  midi.rs  patch.rs  ports.rs  soundscape.rs  topo.rs  voice.rs
src/components/: combine.rs  math.rs  mod.rs  onoff.rs  simple_low_pass.rs  sine.rs  square.rs  traits.rs
src/ui/: drag_rect.rs  mod.rs  ui.rs
src/util/: ft.rs  mod.rs  nmat.rs  vector.rs
tools/: matvis.py  plot_curve.py  visualize_fft.py
uitest/: Cargo.toml
uitest/src/: main.rs
