[package]
name = "synth"
version = "0.1.0"
authors = ["David Zmick <dpzmick@gmail.com>"]

[dependencies]
clippy = {version = "*", optional = true} # what a mess
easyjack = "0.1.2"
enum_primitive = "0.1.1"
time = "0.1"

[features]
default = []

[dependencies.conrod]
git = "https://github.com/PistonDevelopers/conrod.git"
features = ["glium", "winit"]

[profile.release]
debug = true
