[package]
name = "synth"
version = "0.1.0"
authors = ["David Zmick <dpzmick@gmail.com>"]

[dependencies]
clippy = {version = "*", optional = true} # what a mess
easyjack = "0.1.2"
enum_primitive = "0.1.1"
time = "0.1"
ketos = "0.9"
ketos_derive = "0.1.0"

[features]
default = []

[profile.release]
debug = true
